--- a/nspanel_blueprint.yaml
+++ b/nspanel_blueprint.yaml
@@ -3118,17 +3118,17 @@ variables:
         color_rgb:
           "on": "" # NOT IN USE
           "off": "" # NOT IN USE
-      - icon: !input 'home_button04_icon' #E1ED
+      - icon: "" # NOT IN USE
         color_rgb:
-          "on": !input 'home_button04_icon_color01'
-          "off": !input 'home_button04_icon_color02'
-      - icon: !input 'home_button05_icon' #E432
-        color_rgb:
-          "on": !input 'home_button05_icon_color'
+          "on": "" # NOT IN USE
           "off": "" # NOT IN USE
-      - icon: !input 'home_button06_icon' #EDCF
+      - icon: "" # NOT IN USE
         color_rgb:
-          "on": !input 'home_button06_icon_color'
+          "on": "" # NOT IN USE
+          "off": "" # NOT IN USE
+      - icon: "" # NOT IN USE
+        color_rgb:
+          "on": "" # NOT IN USE
           "off": "" # NOT IN USE
       - icon: "" # NOT IN USE
         color_rgb:
